...
    <string name="note_title_hint">Title note</string>
    <string name="note_text_hint">Text note</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="title_activity_note">Edit Note</string>
    <string name="send_mail">Send as email</string>
    <string name="show_camera">Show camera</string>
    <string name="cancel_action">Cancel</string>
    <string name="next_action">Next</string>
    <string name="title_activity_main">NoteKeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
...
